--- a/ag.ems/ag.ems.infrastructure/ag.ems.infrastructure.csproj
+++ b/ag.ems/ag.ems.infrastructure/ag.ems.infrastructure.csproj
@@ -18,7 +18,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
+    <!-- <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" /> -->
   </ItemGroup>
 
 </Project>
